# exchangerate

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: config.rs  error.rs  main.rs  utils.rs
cli/src/commands/: codes.rs  convert.rs  latest.rs  mod.rs  pair.rs
cli/src/formatters/: mod.rs
client/: Cargo.toml  README.md
client/examples/: basic_usage.rs  caching.rs  in_url_auth.rs
client/src/: cache.rs  lib.rs  models.rs  tests.rs
