[package]
name = "exchangerate-cli"
version = "0.1.0"
edition = "2024"
description = "Command line interface for the Exchange Rate API"
authors = ["OpenHands <openhands@all-hands.dev>"]

[dependencies]
client = { path = "../client" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
prettytable-rs = "0.10"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
